@@ -608,7 +608,6 @@ main (int argc, char **argv)
         g_string_append_printf (command_line, " --config %s", config_path);
     if (greeter)
         g_string_append_printf (command_line, " --greeter-session=%s", greeter);
-    g_string_append (command_line, " --session-wrapper=");
     g_string_append_printf (command_line, " --cache-dir %s/cache", temp_dir);
     g_string_append_printf (command_line, " --xsessions-dir=%s/tests/data/xsessions", SRCDIR);
     g_string_append_printf (command_line, " --xgreeters-dir=%s/tests/data/xgreeters", SRCDIR);
