@@ -5,6 +5,7 @@ Overview of changes in lightdm 1.1.0
     * Use LD_PRELOAD to intercept system calls for testing
     * Removed the --passwd-file option as not required for testing anymore
     * Rename test-xserver to X and remove --xserver-command option
+    * Make a test session wrapper and remove --session-wrapper option
 
 Overview of changes in lightdm 1.0.0
 
